# spotify-analytics

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
dashboard/: Dockerfile  app.py  data.py  requirements.txt  theme.py
dashboard/components/: __init__.py  charts.py  kpi.py  recommender.py
dashboard/pages/: 01_overview.py  02_top_artists.py  03_top_tracks.py  04_genre_trends.py  05_listening_patterns.py  06_mood_map.py  07_ml_insights.py
data/: StreamingHistory_daniel.json  StreamingHistory_wife.json
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  README.md
ml/: Dockerfile  features.py  forecast.py  job.py  load.py  recommend.py  requirements.txt  train.py
scripts/: bulk_load_history.py  generate_dummy_spotify_data.py  get_refresh_token.py
src/spotify_analytics/: __init__.py  auth.py  client.py  enrich.py  ingest.py  load.py  models.py
terraform/: bigquery.tf  cloudrun.tf  functions.tf  main.tf  ml_job.tf  outputs.tf  scheduler.tf  secretmanager.tf  terraform.tfvars.example  variables.tf
tests/: test_auth.py  test_client.py  test_dashboard.py  test_enrich.py  test_features.py  test_forecast.py  test_ingest.py  test_load.py  test_ml_job.py  test_models.py  test_recommend.py  test_train.py
transform/: dbt_project.yml
transform/models/: docs.md  schema.yml  sources.yml
transform/models/marts/: dim_artist.sql  dim_track.sql  fct_artist_concentration.sql  fct_daily_summary.sql  fct_genre_trends.sql  fct_listening.sql  ml_cluster_assignments.sql  ml_forecast.sql  ml_model_metrics.sql
transform/models/staging/: stg_streaming_history.sql  stg_track_features.sql
transform/profiles/: .user.yml  profiles.yml
transform/seeds/: seed_genre_lookup.csv
transform/tests/: assert_daily_summary_non_negative.sql  assert_daily_summary_range.sql  assert_fct_listening_timestamps_valid.sql  assert_no_null_track_ids.sql
