[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]

[project]
name = "spotify-analytics"
version = "0.1.0"
description = "Spotify streaming history ETL pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "requests>=2.31",
    "google-cloud-bigquery>=3.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["I", "E", "F", "W", "UP", "N", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_configs = true
disallow_any_unimported = false
disallow_untyped_decorators = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
